fix asciidoc error messages - EN

--- a/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-mapping.adoc
@@ -253,15 +253,15 @@ Recalculating numerical values:
 
 . Next to the marketplace data field, click on *+ Add data field*. +
 → To the left, the list of available plentymarkets data fields are shown in groups.
-. At the very top of the list, click on the plus icon next to *Formula* (icon:calculate[set=material]). +
+. At the very top of the list, click on the plus icon next to *Formula* (material:calculate[]). +
 → The data field *Formula* is added to the field on the right.
 . Click into the data field. +
 → The window *Modify value* is shown.
-. Enter a numerical value or select a plentymarkets data field at the bottom right of the window to add it to the calculation (icon:add[set=material]). +
+. Enter a numerical value or select a plentymarkets data field at the bottom right of the window to add it to the calculation (material:add[]). +
 *_Tip:_* Use the search function. This helps you to find data fields quickly.
-. *_Optional:_* If the symbol icon:more_vert[set=material] is shown in the data field, select the correct assignment for the data field. +
+. *_Optional:_* If the symbol material:more_vert[] is shown in the data field, select the correct assignment for the data field. +
 *_Tip:_* A number tells you how many assignments are necessary for the data field.
-    .. Click on the symbol icon:more_vert[set=material]. +
+    .. Click on the symbol material:more_vert[]. +
     .. In the window shown, select the assignments from the drop-down list.
     .. *Save* the settings.
 . Enter numbers and mathematical operators with the on-screen calculator or the keyboard.
