--- a/docs/en-gb/modules/markets/partials/checklist-variations.adoc
+++ b/docs/en-gb/modules/markets/partials/checklist-variations.adoc
@@ -258,7 +258,7 @@ In the menu *Data » Catalogues » [Open catalogue] » Filter*, you can set filt
 Checking filters:
 
 . Go to *Data » Catalogues » [Open catalogue]*. +
-. On the left in the side navigation, click on the view *Filters* (icon:filter_alt[set=material]). +
+. On the left in the side navigation, click on the view *Filters* (material:filter_alt[]). +
 *_Tip:_* The number next to the word *Filter* shows how many filters have been set. The template filters are included in this number. +
 → The filter overview opens. +
 . Check the logic of the filters.
