--- a/docs/en-gb/modules/payment/pages/debit.adoc
+++ b/docs/en-gb/modules/payment/pages/debit.adoc
@@ -15,7 +15,7 @@ This page is about the *payment method Debit* and not the SEPA direct debit mand
 :name-assistant: Debit
 :name-payment-method: Debit
 
-include::_includes:page$completing-assistant-payment-method.adoc[]
+include::_includes:partial$completing-assistant-payment-method.adoc[]
 
 [#30]
 == Customer classes and shipping profiles
