--- a/docs/en-gb/modules/payment/pages/invoice.adoc
+++ b/docs/en-gb/modules/payment/pages/invoice.adoc
@@ -13,7 +13,7 @@ The explanations in this section apply after adding the plugin. You can find mor
 :name-assistant: Invoice
 :name-payment-method: Invoice
 
-include::_includes:page$completing-assistant-payment-method.adoc[]
+include::_includes:partial$completing-assistant-payment-method.adoc[]
 
 [#30]
 == Customer classes and shipping profiles
