--- a/docs/en-gb/modules/payment/pages/klarna.adoc
+++ b/docs/en-gb/modules/payment/pages/klarna.adoc
@@ -18,7 +18,7 @@ To work with Klarna, you first need a link:https://www.klarna.com/uk/business/[K
 :name-assistant: Klarna
 :name-payment-method: Klarna
 
-include::_includes:page$completing-assistant-payment-method.adoc[]
+include::_includes:partial$completing-assistant-payment-method.adoc[]
 
 include::partial$completing-assistant-multi-clients.adoc[]
 
