--- a/docs/en-gb/modules/payment/pages/mollie.adoc
+++ b/docs/en-gb/modules/payment/pages/mollie.adoc
@@ -22,9 +22,9 @@ There are some parameters set by payment providers, among them usually also supp
 == Completing the assistant
 
 :name-assistant: Mollie
-:payment-method-name: Mollie
+:name-payment-method: Mollie
 
-include::_includes:page$completing-assistant-payment-method.adoc[]
+include::_includes:partial$completing-assistant-payment-method.adoc[]
 
 [IMPORTANT]
 .Completing the assistant again
