--- a/docs/en-gb/modules/payment/pages/payone.adoc
+++ b/docs/en-gb/modules/payment/pages/payone.adoc
@@ -41,7 +41,7 @@ Carrying out settings in the Payone merchant interface:
 :name-assistant: Payone
 :name-payment-method: Payone
 
-include::_includes:page$completing-assistant-payment-method.adoc[]
+include::_includes:partial$completing-assistant-payment-method.adoc[]
 
 [TIP]
 .Payment methods Secure invoice
