--- a/docs/de-de/modules/maerkte/partials/catalogue-preview.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-preview.adoc
@@ -4,8 +4,8 @@ Vorschau im Katalog erstellen:
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . Öffne den Katalog.
-. Klicke oben in der Symbolleiste auf *Vorschau* (icon:preview[set=material]). +
+. Klicke oben in der Symbolleiste auf *Vorschau* (material:preview[]). +
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Produkte des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so zugeordnet, wie du es erwartest?
-. *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
+. *_Optional_*: Klicke auf *Daten herunterladen* (material:file_download[]). +
 → Du kannst eine Datei mit den ersten 5 Produkten auf deinem Rechner speichern.
