--- a/docs/en-gb/modules/markets/pages/mediamarkt.adoc
+++ b/docs/en-gb/modules/markets/pages/mediamarkt.adoc
@@ -17,6 +17,7 @@ include::partial$mirakl-first-steps.adoc[]
 
 :valid-values-zip: https://drive.google.com/file/d/1a_QY4VOIuC2-qYFbNkCMUX-9jerGDAOmYP72907Xt/view?usp=sharing
 :market-backend-shipping: Platform Settings » Shipping
+:mirakl-menu-shipping: Platform Settings » Shipping
 :referrer-name: pass:quotes[referrer *MediaMarkt*]
 
 [#api-key]
