--- a/docs/en-gb/modules/markets/partials/catalogue-preview.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-preview.adoc
@@ -4,8 +4,8 @@ Creating a preview in the catalogue:
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . Open the catalogue.
-. In the toolbar at the top, click on *Preview* (icon:preview[set=material]). +
+. In the toolbar at the top, click on *Preview* (material:preview[]). +
 → In the *Preview* window, a preview of the first 5 products of the export is shown.
 . Check the data. Was the data mapped as you expected?
-. *_Optional_*: Click on *Download data* (icon:file_download[set=material]). +
+. *_Optional_*: Click on *Download data* (material:file_download[]). +
 → You can save a file with the first 5 products on your computer.
