ADD filter and procedure docs

--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -120,6 +120,9 @@ Das Ereignis *Neue Retoure (durch Kunde)* bezieht sich auf Retouren, die durch K
 |====
 |Ereignis |Erläuterung
 
+| *Dokumente generiert*
+|Wähle diese Option, um beliebig viele Dokumente auf einmal aus der Dropdown-Liste zu wählen. Die Ereignisaktion wird ausgelöst, wenn eines der gewählten Dokumente am Auftrag generiert wird.
+
 | *[Dokument] generiert*
 |Die Ereignisaktion wird ausgelöst, wenn eines der folgenden Dokumente generiert wird. Beachte, dass vor der Generierung eines Dokuments die entsprechende xref:auftraege:auftragsdokumente.adoc#300[Dokumentenvorlage] eingerichtet sein muss. +
 xref:auftraege:rechnungen-erzeugen.adoc#[Rechnung] +
@@ -317,6 +320,10 @@ Weitere Informationen zu Amazon Prime- und eBay-Aufträgen findest du auf den Ha
 
 | *Dokument*
 |Aufträge werden anhand des am Auftrag vorhandenen Dokuments gefiltert. Du kannst wählen zwischen *Aktuelle Rechnung* und *Stornobeleg Rechnung* sowie *Nicht verfügbar* und *Verfügbar*.
+
+|*Vorhandene Dokumente*
+|Aufträge werden anhand der am Auftrag vorhandenen Dokumente gefiltert. Wähle aus der Dropdown-Liste, welche Dokumente vorhanden sein sollen. Du kannst mehrere Typen von Auftragsdokumenten gleichzeitig wählen. +
+Beachte, dass alle gewählten Dokumente für den Auftrag existieren müssen.
 
 | *Auftragseingang*
 |Die Aufträge werden anhand des Zeitpunkts des Auftragseingangs gefiltert. Wähle aus der Dropdown-Liste einen Zeitraum zwischen *bis vor 1 Tag* und *bis vor 31 Tagen* aus. Der Bezug ist das aktuelle Datum.
