--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -119,6 +119,9 @@ The event *New return (by customer)* refers to returns that are initiated by cus
 |====
 |Event |Explanation
 
+|*Documents generated*
+|Select this option in order to choose several documents at once from the drop-down list. This event procedure is triggered, if one of the selected documents is generated for an order.
+
 |*[Document] generated*
 |The event procedure is triggered when one of the documents listed is generated. Note that the corresponding xref:orders:order-documents.adoc#300[document template] has to be set up before the document can be generated. +
 xref:orders:generating-invoices.adoc#[Invoice] +
@@ -316,6 +319,10 @@ For more information on Amazon Prime and eBay orders, refer to the respective ma
 
 | *Document*
 |Orders are filtered according to the documents generated in the order. You can choose between *Current invoice* and *Reversal invoice* as well as *Not available* and *Available*.
+
+| *Available documents*
+|Orders are filtered according to the available documents in the order. Select from the drop-down list, which documents should be available. You can select several types of order documents at once. +
+Note that all documents need to exist for the order.
 
 | *Incoming order*
 |Orders are filtered according to the date the order was received. Select a time period between *until 1 day* and *until 31 days* from the drop-down list. Reference for this is the current date.
