--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -510,7 +510,7 @@ Zahlung in der Übersicht lösen:
 [#zahlung-loesen-detailansicht]
 === Zahlung in der Detailansicht lösen
 
-Eine Zahlung lässt sich auch in der Detailansicht lösen. Gehe dafür wie im Folgenden beschrieben vor:
+Eine Zahlung lässt sich auch in der Detailansicht lösen. Gehe dafür wie im Folgenden beschrieben vor.
 
 [.instruction]
 Zahlung in Detailansicht lösen:
